@@ -66,6 +66,7 @@ public class GeneralOptionPane extends AbstractOptionPane
 	private JCheckBox restore;
 	private JCheckBox restoreRemote;
 	private JCheckBox restoreCLI;
+	private JCheckBox restoreSplits;
 	//}}}
 
 	//{{{ GeneralOptionPane constructor
@@ -190,7 +191,11 @@ public class GeneralOptionPane extends AbstractOptionPane
 		restoreCLI.setEnabled(restore.isSelected());
 		addComponent(restoreCLI);
 
-		
+		restoreSplits = new JCheckBox(jEdit.getProperty(
+			"options.general.restore.splits", "Restore split configuration"));
+		restoreSplits.setSelected(jEdit.getBooleanProperty("restore.splits", true));
+		addComponent(restoreSplits);
+
 		hypersearchResultsWarning = new JTextField(jEdit.getProperty("hypersearch.maxWarningResults"));
 		addComponent(jEdit.getProperty("options.general.hypersearch.maxWarningResults"),
 			hypersearchResultsWarning);
@@ -246,6 +251,7 @@ public class GeneralOptionPane extends AbstractOptionPane
 		jEdit.setBooleanProperty("restore",restore.isSelected());
 		jEdit.setBooleanProperty("restore.cli",restoreCLI.isSelected());
 		jEdit.setBooleanProperty("restore.remote", restoreRemote.isSelected());
+		jEdit.setBooleanProperty("restore.splits", restoreSplits.isSelected());
 		try
 		{
 			jEdit.setIntegerProperty("hypersearch.maxWarningResults", Integer.parseInt(hypersearchResultsWarning.getText()));
